Details screen finished

--- a/app/src/main/res/layout/item_seach_result.xml
+++ b/app/src/main/res/layout/item_seach_result.xml
@@ -49,6 +49,7 @@
             android:layout_marginLeft="@dimen/default_padding"
             android:layout_marginStart="@dimen/default_padding"
             android:drawableLeft="@drawable/ic_star"
+            android:drawableStart="@drawable/ic_star"
             android:drawablePadding="5dp"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
@@ -67,6 +68,7 @@
             android:layout_marginRight="@dimen/default_padding"
             android:layout_marginStart="@dimen/default_padding"
             android:drawableLeft="@drawable/ic_money"
+            android:drawableStart="@drawable/ic_money"
             android:drawablePadding="5dp"
             android:gravity="center_vertical"
             app:layout_constraintBaseline_toBaselineOf="@+id/tvRating"
