--- a/app/src/main/res/layout/content_error.xml
+++ b/app/src/main/res/layout/content_error.xml
@@ -2,13 +2,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contentError"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/content_details" />
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardViewContainer"
+    <TextView
+        android:id="@+id/tvErrorMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/default_padding"
@@ -17,20 +16,14 @@
         android:layout_marginRight="@dimen/default_padding"
         android:layout_marginStart="@dimen/default_padding"
         android:layout_marginTop="@dimen/default_padding"
+        android:drawableLeft="@drawable/ic_error"
+        android:drawableStart="@drawable/ic_error"
+        android:gravity="center_vertical"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <include
-            layout="@layout/content_loading"
-            android:visibility="gone" />
-
-        <include
-            layout="@layout/content_error"
-            android:visibility="gone" />
-
-    </android.support.v7.widget.CardView>
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Error message" />
 
 </android.support.constraint.ConstraintLayout>
