--- a/app/src/main/res/layout/content_loading.xml
+++ b/app/src/main/res/layout/content_loading.xml
@@ -2,13 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/contentLoading"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <include layout="@layout/content_details" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardViewContainer"
+    <TextView
+        android:id="@+id/tvLoadingMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/default_padding"
@@ -19,18 +23,8 @@
         android:layout_marginTop="@dimen/default_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <include
-            layout="@layout/content_loading"
-            android:visibility="gone" />
-
-        <include
-            layout="@layout/content_error"
-            android:visibility="gone" />
-
-    </android.support.v7.widget.CardView>
-
+        app:layout_constraintStart_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Please wait" />
 
 </android.support.constraint.ConstraintLayout>
